fix(auth): support login with username or email and handle API response wrapper

--- a/instagram-frontend-mobile/tsconfig.json
+++ b/instagram-frontend-mobile/tsconfig.json
@@ -9,6 +9,7 @@
       "@hooks/*": ["./hooks/*"],
       "@services/*": ["./services/*"],
       "@utils/*": ["./utils/*"],
+      "@types": ["./types/index.ts"],
       "@types/*": ["./types/*"],
       "@config/*": ["./config/*"],
       "@context/*": ["./context/*"],
