--- a/instagram-frontend-mobile/package.json
+++ b/instagram-frontend-mobile/package.json
@@ -38,6 +38,8 @@
     "react-native": "0.81.4",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
+    "react-refresh": "^0.18.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
