--- a/instagram-backend/src/main/resources/application-prod.properties
+++ b/instagram-backend/src/main/resources/application-prod.properties
@@ -2,10 +2,10 @@
 
 # MongoDB Configuration
 spring.data.mongodb.uri=${MONGODB_URI}
-spring.data.mongodb.database=instagram_db
+spring.data.mongodb.database=${MONGODB_DATABASE}
 
 # Server Configuration
-server.port=8080
+server.port=${SERVER_PORT:8080}
 
 # Logging Configuration
 logging.level.root=WARN
@@ -14,10 +14,10 @@ logging.level.org.springframework.web=WARN
 
 # JWT Configuration
 jwt.secret=${JWT_SECRET}
-jwt.expiration=86400000
+jwt.expiration=${JWT_EXPIRATION}
 
 # File Upload Configuration
-file.upload-dir=${FILE_UPLOAD_DIR}
+file.upload-dir=${FILE_UPLOAD_DIR}/prob
 
 # Security Configuration
 spring.security.require-ssl=true
