--- a/instagram-backend/pom.xml
+++ b/instagram-backend/pom.xml
@@ -38,6 +38,11 @@
         <spring-boot.version>3.5.6</spring-boot.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>3.0.0</version>
+        </dependency>
         <!-- Spring Boot Starters -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
