--- a/instagram-backend/src/main/resources/application-dev.properties
+++ b/instagram-backend/src/main/resources/application-dev.properties
@@ -1,14 +1,14 @@
 # Development Profile Configuration
 
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/instagram_db_dev
+spring.data.mongodb.uri=${MONGODB_URI}
 spring.data.mongodb.database=instagram_db_dev
 
 # Server Configuration
-server.port=8080
+server.port=${SERVER_PORT}
 
 # Logging Configuration
-logging.level.root=INFO
+logging.level.root=${LOGGING_LEVEL}
 logging.level.com.instagram=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.data.mongodb=DEBUG
@@ -18,5 +18,5 @@ jwt.secret=instagram_jwt_secret_key_for_development_only
 jwt.expiration=86400000
 
 # File Upload Configuration
-file.upload-dir=./uploads/dev
+file.upload-dir=${FILE_UPLOAD_DIR}/dev
 
