add InitData class

--- a/instagram-backend/src/main/resources/application.properties
+++ b/instagram-backend/src/main/resources/application.properties
@@ -40,3 +40,8 @@ springdoc.swagger-ui.operations-sorter=alpha
 # Security Configuration
 spring.security.user.name=${ADMIN_USERNAME}
 spring.security.user.password=${ADMIN_PASSWORD}
+
+# Data Initialization Configuration
+app.data.initialize=${DATA_INITIALIZE:true}
+app.data.admin.username=${ADMIN_USERNAME:admin}
+app.data.admin.password=${ADMIN_PASSWORD:admin123}
