--- a/instagram-frontend-mobile/package.json
+++ b/instagram-frontend-mobile/package.json
@@ -26,6 +26,7 @@
     "expo-device": "^8.0.9",
     "expo-file-system": "^19.0.17",
     "expo-font": "^14.0.9",
+    "expo-image": "^3.0.10",
     "expo-image-manipulator": "^14.0.7",
     "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "^14.0.3",
