--- a/instagram-frontend-mobile/package.json
+++ b/instagram-frontend-mobile/package.json
@@ -38,10 +38,13 @@
     "expo-splash-screen": "^31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "^6.0.7",
+    "expo-video": "~3.0.11",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
+    "react-native-swiper-flatlist": "^3.2.5",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
     "react-refresh": "^0.18.0",
     "zustand": "^5.0.8"
