fix: create route

--- a/instagram-backend/src/main/resources/application.properties
+++ b/instagram-backend/src/main/resources/application.properties
@@ -17,9 +17,9 @@ jwt.refresh-expiration=${JWT_REFRESH_EXPIRATION}
 
 # File Upload Configuration
 file.upload-dir=${FILE_UPLOAD_DIR}
-file.max-size=${FILE_MAX_SIZE}
-spring.servlet.multipart.max-file-size=5MB
-spring.servlet.multipart.max-request-size=10MB
+file.max-size=${FILE_MAX_SIZE:52428800}
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
 
 # JPA Configuration
 spring.jpa.open-in-view=false
