--- a/instagram-backend/src/main/resources/application.properties
+++ b/instagram-backend/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+spring.config.import=optional:file:.env[.properties]
+spring.mongodb.embedded.enabled=false
+
+
 # Application Configuration
 spring.application.name=instagram-backend
 server.port=${SERVER_PORT}
