fix(api): update uploadFile params to remove userId and update max file size to 50MB

--- a/instagram-backend/src/main/resources/application.properties
+++ b/instagram-backend/src/main/resources/application.properties
@@ -20,6 +20,7 @@ file.upload-dir=${FILE_UPLOAD_DIR}
 file.max-size=${FILE_MAX_SIZE:52428800}
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+spring.servlet.multipart.enabled=true
 
 # JPA Configuration
 spring.jpa.open-in-view=false
