--- a/instagram-frontend-mobile/package.json
+++ b/instagram-frontend-mobile/package.json
@@ -4,8 +4,8 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint .",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\""
@@ -29,7 +29,7 @@
     "expo-font": "^14.0.9",
     "expo-image": "^3.0.10",
     "expo-image-manipulator": "^14.0.7",
-    "expo-image-picker": "^17.0.8",
+    "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "^14.0.3",
     "expo-linking": "^8.0.8",
     "expo-location": "~19.0.7",
