--- a/instagram-frontend-mobile/package.json
+++ b/instagram-frontend-mobile/package.json
@@ -43,8 +43,10 @@
     "expo-video": "~3.0.11",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.15.0",
     "react-native-swiper-flatlist": "^3.2.5",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
