--- a/instagram-frontend-mobile/package.json
+++ b/instagram-frontend-mobile/package.json
@@ -13,16 +13,16 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-navigation/bottom-tabs": "^7.4.9",
-    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/bottom-tabs": "^7.4.0",
+    "@react-navigation/native": "^7.1.8",
     "@react-navigation/stack": "^7.4.10",
     "@stomp/stompjs": "^7.2.1",
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
     "babel-plugin-module-resolver": "^5.0.2",
-    "expo": "~54.0.13",
+    "expo": "~54.0.25",
     "expo-av": "~16.0.7",
-    "expo-camera": "~17.0.8",
+    "expo-camera": "~17.0.9",
     "expo-constants": "^18.0.9",
     "expo-device": "^8.0.9",
     "expo-file-system": "^19.0.17",
@@ -30,26 +30,28 @@
     "expo-image": "^3.0.10",
     "expo-image-manipulator": "^14.0.7",
     "expo-image-picker": "~17.0.8",
-    "expo-linear-gradient": "^14.0.3",
-    "expo-linking": "^8.0.8",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-linking": "~8.0.9",
     "expo-location": "~19.0.7",
     "expo-media-library": "~18.2.0",
-    "expo-notifications": "^0.32.12",
-    "expo-router": "^6.0.12",
+    "expo-notifications": "~0.32.13",
+    "expo-router": "~6.0.15",
     "expo-secure-store": "^15.0.7",
-    "expo-splash-screen": "^31.0.10",
+    "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
-    "expo-system-ui": "^6.0.7",
-    "expo-video": "~3.0.11",
+    "expo-system-ui": "~6.0.8",
+    "expo-video": "~3.0.14",
     "react": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "^4.1.5",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.15.0",
+    "react-native-svg": "15.12.1",
     "react-native-swiper-flatlist": "^3.2.5",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1",
     "react-refresh": "^0.18.0",
     "sockjs-client": "^1.6.1",
     "zustand": "^5.0.8"
