--- a/instagram-backend/src/main/resources/application.properties
+++ b/instagram-backend/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.application.name=instagram-backend
 server.port=${SERVER_PORT}
 server.servlet.context-path=/api
+app.base-url=${BASE_URL}
 
 spring.profiles.active=${SPRING_PROFILES_ACTIVE}
 
