--- a/instagram-frontend-mobile/package.json
+++ b/instagram-frontend-mobile/package.json
@@ -43,6 +43,7 @@
     "expo-video": "~3.0.11",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-emoji-selector": "^0.2.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
     "react-native-swiper-flatlist": "^3.2.5",
