--- a/instagram-frontend-mobile/package.json
+++ b/instagram-frontend-mobile/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
     "babel-plugin-module-resolver": "^5.0.2",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.25",
     "expo-av": "~16.0.7",
     "expo-camera": "~17.0.9",
@@ -46,7 +47,7 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "^4.1.5",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
