--- a/instagram-frontend-mobile/package.json
+++ b/instagram-frontend-mobile/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^4.1.0",
     "expo": "~54.0.25",
     "expo-av": "~16.0.7",
+    "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.9",
     "expo-constants": "^18.0.9",
     "expo-device": "^8.0.9",
