Feat(chat-ai, group chat): add ai-assistant and image/video sending to a conversation

--- a/instagram-backend/src/main/resources/application-dev.properties
+++ b/instagram-backend/src/main/resources/application-dev.properties
@@ -1,22 +1,7 @@
-# Development Profile Configuration
-
-# MongoDB Configuration
 spring.data.mongodb.uri=${MONGODB_URI}
-spring.data.mongodb.database=instagram_db_dev
+spring.data.mongodb.database=${MONGODB_DATABASE}
 
-# Server Configuration
-server.port=${SERVER_PORT}
-
-# Logging Configuration
-logging.level.root=${LOGGING_LEVEL}
-logging.level.com.instagram=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.data.mongodb=DEBUG
 
-# JWT Configuration
-jwt.secret=instagram_jwt_secret_key_for_development_only
-jwt.expiration=86400000
-
-# File Upload Configuration
 file.upload-dir=${FILE_UPLOAD_DIR}/dev
-
