--- a/instagram-backend/src/main/resources/application-prod.properties
+++ b/instagram-backend/src/main/resources/application-prod.properties
@@ -1,24 +1,14 @@
-# Production Profile Configuration
-
-# MongoDB Configuration
 spring.data.mongodb.uri=${MONGODB_URI}
 spring.data.mongodb.database=${MONGODB_DATABASE}
 
-# Server Configuration
 server.port=${SERVER_PORT:8080}
 
-# Logging Configuration
 logging.level.root=WARN
-logging.level.com.instagram=INFO
 logging.level.org.springframework.web=WARN
 
-# JWT Configuration
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION}
 
-# File Upload Configuration
-file.upload-dir=${FILE_UPLOAD_DIR}/prob
+file.upload-dir=${FILE_UPLOAD_DIR}/prod
 
-# Security Configuration
 spring.security.require-ssl=true
-
