--- a/instagram-backend/src/main/resources/application.properties
+++ b/instagram-backend/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-# Application Configuration
 spring.application.name=instagram-backend
 server.port=${SERVER_PORT}
 server.servlet.context-path=/api
@@ -6,43 +5,44 @@ app.base-url=${BASE_URL}
 
 spring.profiles.active=${SPRING_PROFILES_ACTIVE}
 
-# MongoDB Configuration
+# MongoDB
 spring.data.mongodb.uri=${MONGODB_URI}
 spring.data.mongodb.database=${MONGODB_DATABASE}
 spring.data.mongodb.auto-index-creation=true
 
-# JWT Configuration
+# JWT
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION}
 jwt.refresh-expiration=${JWT_REFRESH_EXPIRATION}
 
-# File Upload Configuration
+# File Upload
 file.upload-dir=${FILE_UPLOAD_DIR}
-file.max-size=${FILE_MAX_SIZE:52428800}
+file.max-size=${FILE_MAX_SIZE}
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
-spring.servlet.multipart.enabled=true
 
-# JPA Configuration
-spring.jpa.open-in-view=false
-
-# Logging Configuration
+# Logging
 logging.level.root=${LOGGING_LEVEL}
-logging.level.com.instagram=DEBUG
-logging.level.org.springframework.web=INFO
-logging.level.org.springframework.data.mongodb=DEBUG
 
-# Springdoc OpenAPI Configuration
+# Swagger
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.swagger-ui.tags-sorter=alpha
-springdoc.swagger-ui.operations-sorter=alpha
 
-# Security Configuration
-spring.security.user.name=${ADMIN_USERNAME}
-spring.security.user.password=${ADMIN_PASSWORD}
+# Seed Data Init
+app.data.initialize=${DATA_INITIALIZE}
+app.data.admin.username=${ADMIN_USERNAME}
+app.data.admin.password=${ADMIN_PASSWORD}
 
-# Data Initialization Configuration
-app.data.initialize=${DATA_INITIALIZE:true}
-app.data.admin.username=${ADMIN_USERNAME:admin}
-app.data.admin.password=${ADMIN_PASSWORD:admin123}
+#Spring ai
+spring.ai.openai.api-key=${OPENAI_API_KEY}
+spring.ai.openai.base-url=${OPENAI_BASE_URL:https://api.openai.com/v1}
+
+app.openai.model=${OPENAI_MODEL:gpt-3.5-turbo}
+app.openai.temperature=${OPENAI_TEMPERATURE:0.7}
+app.openai.max-tokens=${OPENAI_MAX_TOKENS:2048}
+app.openai.top-p=${OPENAI_TOP_P:1.0}
+app.openai.frequency-penalty=${OPENAI_FREQUENCY_PENALTY:0.0}
+app.openai.presence-penalty=${OPENAI_PRESENCE_PENALTY:0.0}
+
+spring.ai.openai.http.client.connect-timeout=10s
+spring.ai.openai.http.client.read-timeout=${OPENAI_TIMEOUT:30s}
