--- a/instagram-frontend-mobile/app.json
+++ b/instagram-frontend-mobile/app.json
@@ -23,10 +23,11 @@
       },
       "package": "com.instagram.mobile",
       "permissions": [
-        "CAMERA",
         "READ_EXTERNAL_STORAGE",
         "WRITE_EXTERNAL_STORAGE",
-        "NOTIFICATIONS"
+        "READ_MEDIA_IMAGES",
+        "READ_MEDIA_VIDEO",
+        "AUDIO"
       ]
     },
     "web": {
@@ -45,8 +46,13 @@
       [
         "expo-media-library",
         {
-          "photosPermission": "Allow Instagram to access your photos.",
-          "savePhotosPermission": "Allow Instagram to save photos."
+          "photosPermission": "Allow Social Trio to access your photos.",
+          "savePhotosPermission": "Allow Social Trio to save photos.",
+          "isAccessMediaLocationEnabled": true,
+          "granularPermissions": [
+            "audio",
+            "photo"
+          ]
         }
       ],
       [
@@ -62,8 +68,8 @@
     },
     "extra": {
       "dev": {
-        "apiUrl": "http://192.168.100.2:8080",
-        "wsUrl": "http://192.168.100.2:8080"
+        "apiUrl": "http://192.168.1.20:8080",
+        "wsUrl": "http://192.168.1.20:8080"
       },
       "prod": {
         "apiUrl": "https://your-production-api.com",
