--- a/instagram-frontend-mobile/package.json
+++ b/instagram-frontend-mobile/package.json
@@ -45,6 +45,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.8",
     "expo-video": "~3.0.14",
+    "expo-video-thumbnails": "~10.0.7",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-emoji-selector": "^0.2.0",
