feat: add feature that allowing users to download image and video in a conversation

--- a/instagram-frontend-mobile/app.json
+++ b/instagram-frontend-mobile/app.json
@@ -26,6 +26,10 @@
         "CAMERA",
         "READ_EXTERNAL_STORAGE",
         "WRITE_EXTERNAL_STORAGE",
+        "READ_MEDIA_IMAGES",
+        "READ_MEDIA_VIDEO",
+        "READ_MEDIA_AUDIO",
+        "ACCESS_MEDIA_LOCATION",
         "NOTIFICATIONS"
       ]
     },
@@ -46,7 +50,8 @@
         "expo-media-library",
         {
           "photosPermission": "Allow Instagram to access your photos.",
-          "savePhotosPermission": "Allow Instagram to save photos."
+          "savePhotosPermission": "Allow Instagram to save photos.",
+          "isAccessMediaLocationEnabled": true
         }
       ],
       [
