--- a/instagram-backend/src/main/resources/application.properties
+++ b/instagram-backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=instagram-backend
+spring.application.name=sudo-backend
 server.port=${SERVER_PORT}
 server.servlet.context-path=/api
 app.base-url=${BASE_URL}
