fix: solve the problem of overlapping on message input in conversation screen

--- a/instagram-frontend-mobile/app.json
+++ b/instagram-frontend-mobile/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "Instagram Mobile",
-    "slug": "instagram-frontend-mobile",
+    "name": "Sudo Mobile",
+    "slug": "Sudo-frontend-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "scheme": "instagram",
+    "scheme": "Sudo",
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/splash-icon.png",
@@ -23,14 +23,17 @@
       },
       "package": "com.instagram.mobile",
       "permissions": [
-        "CAMERA",
-        "READ_EXTERNAL_STORAGE",
-        "WRITE_EXTERNAL_STORAGE",
-        "READ_MEDIA_IMAGES",
-        "READ_MEDIA_VIDEO",
-        "READ_MEDIA_AUDIO",
-        "ACCESS_MEDIA_LOCATION",
-        "NOTIFICATIONS"
+        "android.permission.CAMERA",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.READ_MEDIA_IMAGES",
+        "android.permission.READ_MEDIA_VIDEO",
+        "android.permission.READ_MEDIA_AUDIO",
+        "android.permission.ACCESS_MEDIA_LOCATION",
+        "android.permission.NOTIFICATIONS",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS",
+        "android.permission.READ_MEDIA_VISUAL_USER_SELECTED"
       ]
     },
     "web": {
@@ -40,6 +43,7 @@
     },
     "plugins": [
       "expo-router",
+      "expo-av",
       [
         "expo-image-picker",
         {
@@ -49,8 +53,8 @@
       [
         "expo-media-library",
         {
-          "photosPermission": "Allow Instagram to access your photos.",
-          "savePhotosPermission": "Allow Instagram to save photos.",
+          "photosPermission": "Allow Sudo to access your photos.",
+          "savePhotosPermission": "Allow Sudo to save photos.",
           "isAccessMediaLocationEnabled": true
         }
       ],
@@ -73,7 +77,12 @@
       "prod": {
         "apiUrl": "https://mediashare-platform.onrender.com",
         "wsUrl": "https://mediashare-platform.onrender.com"
+      },
+      "router": {},
+      "eas": {
+        "projectId": "6e0ce76f-9177-46da-a1cf-402394f657e0"
       }
-    }
+    },
+    "owner": "hgjyhm"
   }
 }
