--- a/instagram-frontend-mobile/package.json
+++ b/instagram-frontend-mobile/package.json
@@ -26,6 +26,7 @@
     "expo": "~54.0.25",
     "expo-audio": "~1.0.15",
     "expo-av": "~16.0.7",
+    "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.9",
     "expo-constants": "^18.0.9",
@@ -52,6 +53,7 @@
     "react-native-emoji-selector": "^0.2.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-qrcode-svg": "^6.3.20",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
