--- a/instagram-frontend-mobile/app.json
+++ b/instagram-frontend-mobile/app.json
@@ -23,14 +23,17 @@
       },
       "package": "com.Sudo.mobile",
       "permissions": [
-        "CAMERA",
-        "READ_EXTERNAL_STORAGE",
-        "WRITE_EXTERNAL_STORAGE",
-        "READ_MEDIA_IMAGES",
-        "READ_MEDIA_VIDEO",
-        "READ_MEDIA_AUDIO",
-        "ACCESS_MEDIA_LOCATION",
-        "NOTIFICATIONS"
+        "android.permission.CAMERA",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.READ_MEDIA_IMAGES",
+        "android.permission.READ_MEDIA_VIDEO",
+        "android.permission.READ_MEDIA_AUDIO",
+        "android.permission.ACCESS_MEDIA_LOCATION",
+        "android.permission.NOTIFICATIONS",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.READ_MEDIA_VISUAL_USER_SELECTED",
+        "android.permission.MODIFY_AUDIO_SETTINGS"
       ]
     },
     "web": {
@@ -74,6 +77,10 @@
       "prod": {
         "apiUrl": "https://your-production-api.com",
         "wsUrl": "https://your-production-api.com"
+      },
+      "router": {},
+      "eas": {
+        "projectId": "5b327a23-8bfb-4b31-80c2-4a9496b0896e"
       }
     }
   }
