--- a/instagram-frontend-mobile/package.json
+++ b/instagram-frontend-mobile/package.json
@@ -29,6 +29,7 @@
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.9",
     "expo-constants": "^18.0.9",
+    "expo-dev-client": "~6.0.18",
     "expo-device": "^8.0.9",
     "expo-file-system": "^19.0.19",
     "expo-font": "^14.0.9",
