--- a/instagram-frontend-mobile/eas.json
+++ b/instagram-frontend-mobile/eas.json
@@ -9,7 +9,10 @@
       "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal"
+      "developmentClient": false,
+      "android": {
+        "buildType": "apk"
+      }
     },
     "production": {
       "autoIncrement": true
